text fixes, video z-index fix

--- a/CSS/ISI_Web.css
+++ b/CSS/ISI_Web.css
@@ -99,7 +99,7 @@ ul {
 
 .middle-container iframe {
     margin: 2em auto;
-    z-index: 10000000;
+    z-index: 100;
     position: relative;
 }
 
